--- a/frontend/public/index.css
+++ b/frontend/public/index.css
@@ -46,12 +46,10 @@ a {
 .post-box-div {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-bottom: solid 1px #2b2b2b;
     margin: auto;
-    padding: 50px 0;
+    padding: 40px 0 20px 0;
     position: relative;
+    border-bottom: solid 1px lightgrey;
 }
 
 .post-box-div h2 {
@@ -139,6 +137,7 @@ button:active {
   padding: 10px 0 0;
 }
 
+
 @media only screen and (max-width: 600px) {
   .app {
     width: 95vw;
@@ -160,7 +159,7 @@ button:active {
 
 }
 
-  
+
 .paginate ul {
   display: inline-block;
   padding-left: 15px;
@@ -171,6 +170,7 @@ button:active {
 .pagination-div {
   display: flex;
   justify-content: center;
+  margin: 20px 0;
 }
 
 .pagination {
@@ -183,4 +183,5 @@ button:active {
 .pagination li :first-child{
   display: inline-block;
   margin: auto;
+  cursor: pointer;
 }
